# scegfx

./: .clang-format  .cmake-format  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/hello_scegfx/: CMakeLists.txt  bridging_header.h  hello_scegfx.c  hello_scegfx.frag.glsl  hello_scegfx.vert.glsl
include/scegfx/: allocator.h  buffer.h  command_buffer.h  common.h  context.h  descriptor_set.h  descriptor_set_layout.h  device_memory.h  fence.h  framebuffer.h  image.h  image_view.h  pipeline.h  pipeline_layout.h  render_pass.h  sampler.h  semaphore.h  shader_module.h  swapchain.h
src/: context.c
src/backend/opengl/: buffer_opengl.c  buffer_opengl.h  command_buffer_opengl.c  command_buffer_opengl.h  commands_opengl.c  commands_opengl.h  context_opengl.c  context_opengl.h  descriptor_set_layout_opengl.c  descriptor_set_layout_opengl.h  descriptor_set_opengl.h  device_memory_opengl.h  fence_opengl.c  fence_opengl.h  framebuffer_opengl.c  framebuffer_opengl.h  image_opengl.c  image_opengl.h  image_view_opengl.c  image_view_opengl.h  pipeline_layout_opengl.c  pipeline_layout_opengl.h  pipeline_opengl.c  pipeline_opengl.h  render_pass_opengl.c  render_pass_opengl.h  sampler_opengl.c  sampler_opengl.h  semaphore_opengl.c  semaphore_opengl.h  shader_module_opengl.c  shader_module_opengl.h  swapchain_opengl.c  swapchain_opengl.h  vao_map.c  vao_map.h
src/backend/vulkan/: buffer_vulkan.c  buffer_vulkan.h  command_buffer_vulkan.c  command_buffer_vulkan.h  context_vulkan.c  context_vulkan.h  descriptor_set_layout_vulkan.c  descriptor_set_layout_vulkan.h  descriptor_set_vulkan.h  device_memory_vulkan.h  fence_vulkan.c  fence_vulkan.h  framebuffer_vulkan.c  framebuffer_vulkan.h  image_view_vulkan.c  image_view_vulkan.h  image_vulkan.c  image_vulkan.h  pipeline_layout_vulkan.c  pipeline_layout_vulkan.h  pipeline_vulkan.c  pipeline_vulkan.h  render_pass_vulkan.c  render_pass_vulkan.h  sampler_vulkan.c  sampler_vulkan.h  semaphore_vulkan.c  semaphore_vulkan.h  shader_module_vulkan.c  shader_module_vulkan.h  swapchain_vulkan.c  swapchain_vulkan.h
src/backend/webgpu/: buffer_webgpu.c  buffer_webgpu.h  context_webgpu.c  context_webgpu.h  device_memory_webgpu.h  swapchain_webgpu.c  swapchain_webgpu.h
